<resources>
    <string name="app_name">MY MATAU APP</string>
    <string name="welcome">Welcome!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="create">Register</string>
    <string name="forgot">Forgot Password?</string>
    <string name="full_name">Full Name</string>
    <string name="number">Phone Number</string>
    <string name="address">Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">REGISTER</string>
    <string name="reset">RESET</string>
    <string name="back_login">Back to Login</string>
    <string name="email_registered">Registered Email</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="submit_new_password">SUBMIT NEW PASSWORD</string>
    <string name="set_new">Set New Password</string>
    <string name="new_password">New Password</string>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="start_trip">Start Trip</string>
    <string name="mark_as_full">Mark as Full</string>

</resources>